[gd_scene load_steps=4 format=3 uid="uid://cnquo5vxxab3b"]

[ext_resource type="Script" path="res://scripts/cannon_ball.gd" id="1_4cchp"]
[ext_resource type="PackedScene" uid="uid://dgeesa103s8qf" path="res://models/SpikyBall.gltf" id="1_vn171"]

[sub_resource type="SphereShape3D" id="SphereShape3D_pj7ts"]
radius = 0.6

[node name="CannonBall" type="Node3D"]
script = ExtResource("1_4cchp")

[node name="SpikyBall" parent="." instance=ExtResource("1_vn171")]

[node name="HitArea" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitArea"]
shape = SubResource("SphereShape3D_pj7ts")

[node name="Lifetime" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="queue_free"]
